Dear Emacs, please make this -*-Text-*- mode!

NEWS for gWidgetsQt

Changes for 0.0-2
-------------------
* added code for drag and drop with widgets: gvarbrowser, glabel, ...
* rewrote gexpandgroup. Still have issue with sizing
* rewrote gvarbrowser
* fix to how gwindow responds to size changes
* fixes to how ggroup, glayout handle expand, fill, anchor arguments
* added [ method to glayout for extraction
* put in enumerations
* bug fix for how widgets are added when expand/anchor not given