@@ -4,6 +4,7 @@ NEWS for gWidgetsQt
 
 Changes for 0.0-2
 -------------------
+* use device code from qtutils to make ggraphics
 * added code for drag and drop with widgets: gvarbrowser, glabel, ...
 * rewrote gexpandgroup. Still have issue with sizing
 * rewrote gvarbrowser
